使用SpringCache缓存套餐数据

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  cache:
+    redis:
+      time-to-live: 1800000
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
